--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+
+  <meta property="og:title" content="My Portfolio" />
+  <meta property="og:site_name" content="My Portfolio" />
+  <meta property="og:description" content="Portfolio's made in Madagascar by RAMERISON ANSELME" />
+  <meta property="og:image" content="https://i.imgur.com/yTwjoeZ.png" />
+  <meta property="og:image:width" content="1481" />
+  <meta property="og:image:height" content="713" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="en_US" />
+
+  <title>My Portfolio</title>
 </head>
 
 <body>
